@@ -1,5 +1,11 @@
 2008-04-22  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/data/xy/DefaultTableXYDataset.java:
+    Implemented PublicCloneable, plus
+    (clone): New method override.
+
+2008-04-22  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/data/xy/DefaultOHLCDataset.java:
     Implemented PublicCloneable, plus
     (clone): New method override.
